turtleart.kerr40.Kerr40.scala.error
Compilation error:
Kerr40:12: error: not found: value foward
  foward(30)
  ^